charts/plex/manifests/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: plex
  namespace: apps
spec:
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - image: jaymoulin/plex:1.15.3-aarch64
        imagePullPolicy: IfNotPresent
        name: pms
        ports:
          - name: http
            containerPort: 32400
        volumeMounts:
          - mountPath: /media
            name: media
          - mountPath: /root/Library
            name: plex-appdata
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: plex-media
        - name: plex-appdata
          persistentVolumeClaim:
            claimName: plex-appdata
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k8s-home-node1
