charts/plex/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: plex
  name: plex
  namespace: apps
spec:
  rules:
  - host: plex.sandermann.cloud
    http:
      paths:
      - backend:
          serviceName: plex
          servicePort: 32400
        path: /
  tls:
  - hosts:
    - plex.sandermann.cloud
    secretName: sandermann.cloud
